@@ -3090,10 +3090,11 @@ class MeetingConfig(OrderedBaseFolder, BrowserDefaultMixin):
         if '' in values:
             values.remove('')
         msg = translate('wa_conflicts', domain='PloneMeeting', context=self.REQUEST)
-        if 'items_come_validated' in values:
-            if 'creator_initiated_decisions' in values or \
-               'pre_validation' in values or \
-               'pre_validation_keep_reviewer_permissions' in values:
+        if 'items_come_validated' in values and \
+            ('creator_initiated_decisions' in values or
+             'pre_validation' in values or
+             'pre_validation_keep_reviewer_permissions' in values or
+             'reviewers_take_back_validated_item' in values):
                 return msg
         if ('archiving' in values) and (len(values) > 1):
             # Archiving is incompatible with any other workflow adaptation
